# dispatch_server

./: .gitignore  CHANGELOG.md  dev_install.sh  justfile  pyproject.toml  setup.py  test_cmd.py
.cache/v/cache/: lastfailed
dispatch/: __init__.py  arg_types.py  dec_fcall.py  dispatcher.py  exceptions.py  responses.py
dispatch_flask/: routes.py
src/dispatch/: __init__.py  dec_fcall.py  dispatcher.py  exceptions.py
src/dispatch_flask/: responses_flask.py  routes.py
src/dispatch_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  resource_flask_test_lib.py  resource_test_flask_app.py  t_dispatch.py  t_dispatch_flask.py  test_dispatch.py  test_dispatch_flask.py
